@@ -163,6 +163,9 @@
 			<li><span class="label label-success">Added</span> The method 
 				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority.getLockedObjects()</code> has been added the get all the locked objects.
 			</li>
+			<li><span class="label label-success">Added</span> A new tab has been added in the properties dialog box, when an aird is selected, to present technical information about the Sirius Session. For more details, refer the 
+				<a href="user/general/SiriusSessionDetailedInformation.html">documentation</a> .
+			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
 		<ul>
