@@ -34,6 +34,11 @@
 				</a> describes the possiblity to associate Sirius preferences to an aird file that will override the values defined in Window/Preferences/Sirius.
 			</li>
 			<li>
+				<a href="general/SiriusSessionDetailedInformation.html">
+					<strong>Sirius Session detailed information</strong>
+				</a> provides information on the opened Sirius Session.
+			</li>
+			<li>
 				<a href="diagrams/Diagrams.html">
 					<strong>Diagrams</strong>
 				</a> shows all the common features of graphical modelers made with Sirius.
