@@ -1,0 +1,28 @@
+<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<title>SiriusSessionDetailedInformation</title>
+		<link type="text/css" rel="stylesheet" href="../../resources/bootstrap.css"/>
+		<link type="text/css" rel="stylesheet" href="../../resources/custom.css"/>
+	</head>
+	<body>
+		<h1 id="SiriusSessiondetailedinformation">Sirius Session detailed information</h1>
+		<p>This document describes how to see information on the opened Sirius Session.</p>
+		<p>The Sirius Session is the runtime concept of a Sirius Modeling Project. It corresponds to the information in memory of an opened modeling project.</p>
+		<p>To get this information, right click on the aird and select 
+			<strong>Properties</strong> and then 
+			<strong>Sirius Session Details</strong>.
+		</p>
+		<p>The Sirius Session detailed information tab provides information about</p>
+		<ul>
+			<li>the resources used (aird, srm, semantic and controlled resources as well) with number of contained elements</li>
+			<li>the viewpoints used</li>
+			<li>the representations (number, size, loaded representations, invalid representations, etc)</li>
+		</ul>
+		<p>Example:</p>
+		<p>
+			<img border="0" src="images/SiriusSessionDetails.png"/>
+		</p>
+	</body>
+</html>
